[tool.poetry]
name = "pmhn"
version = "0.1.0"
description = ""
authors = ["Computational Biology Group"]
readme = "README.md"
packages = [{include = "pmhn", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.0"
mhn = "^0.0.14"
joblib = "^1.2.0"
pytensor = "^2.12.3"
pymc = ">=5"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
pydantic = "^1.10.9"
netcdf4 = "^1.6.4"
anytree = "^2.9.0"
jaxtyping = "^0.2.23"
jax = "^0.4.20"
jaxlib = "^0.4.20"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
ruff = "^0.0.253"
black = "^23.1.0"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.2.0"
pre-commit = "^3.1.0"
pyright = "^1.1.327"
mkdocs = "^1.4.3"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
mkdocs-material = "^9.1.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.ruff]
select = ["E", "F", "I001"]
ignore = ["E721", "E731", "F722"]

